--- a/facetouch/templates/show_events.html
+++ b/facetouch/templates/show_events.html
@@ -1,22 +1,37 @@
 <!-- djangotemplates/example/templates/data.html -->
 
 <!--{#{% extends 'base.html' %}#}-->
+<link type="text/css" rel="stylesheet" href="/static/css/lightslider.css" />
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="/static/js/lightslider.js"></script>
 <!DOCTYPE html>
 <style>
-ul#menu li {
-  display:inline;
+    	ul{
+			list-style: none outside none;
+		    padding-left: 0;
+            margin: 0;
+		}
+        .demo .item{
+            margin-bottom: 60px;
+        }
+		.content-slider li{
+		    background-color: bisque;
+		    text-align: center;
+		    color: #FFF;
+		}
+		.content-slider h3 {
+		    margin: 0;
+		    padding: 70px 0;
+		}
+		.demo{
+			width: 90%;
+            horiz-align: center;
+            border: 3px solid;
+		}
+ul {
+    white-space: nowrap;
+    overflow: scroll;
 }
-
-ul#menu div {
-  display:inline;
-}
-
-.division{
-      display:inline;
-      <!--width="25%";-->
-      <!--height="300px";-->
-      <!--border: 2px solid #000000;-->
-      }
 </style>
 
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -27,106 +42,70 @@ ul#menu div {
     <title></title>
   </head>
   <body>
-
-      <button onclick="myFunction()">Right Scroll</button>
-
+      <button onclick="right()">Right Scroll</button>
       <button onclick="left()">Left Scroll</button>
-
-      <p id="daredevil">welcome to the jungle</p>
-
   <script>
-    var i=0;
+  var slider;
+  $(document).ready(function() {
+    slider = $("#lightSlider").lightSlider({
+         loop:true,
+         keyPress:true
+    });
+    document.getElementById(1).setAttribute("class", "w3-opacity-min");
+  });
+    var currentIndex = 0;
     var list = [];
     {% for item in data %}
       list.push({{item.pk}});
     {% endfor %}
-    function myFunction() {
-      <!--document.getElementById("daredevil").innerHTML=list;-->
-      if(i!=0)document.getElementById(""+list[i-1]).setAttribute("class", "w3-opacity-max");
-      document.getElementById(""+list[i]).setAttribute("class", "w3-opacity-min");
-      i++;
+
+
+    function right() {
+        slider.goToNextSlide()
+        moveToNext(1)
+    }
+    function moveToNext(direction){
+        const current = document.getElementById(list[currentIndex]);
+        current.setAttribute("class", "w3-opacity-max");
+        let nextIndex;
+        console.log("dir" + direction)
+        console.log("curr" + currentIndex)
+        if(currentIndex==list.length-1 && direction == 1){
+            nextIndex = 0;
+        }
+        else if(currentIndex == 0 && direction == -1){
+            nextIndex = list.length - 1;
+        }
+        else{
+            nextIndex = currentIndex + direction;
+        }
+        console.log("next" + nextIndex)
+        const nextItem = document.getElementById(list[nextIndex]);
+        nextItem.setAttribute("class", "w3-opacity-min");
+        currentIndex = nextIndex;
     }
 
     function left() {
-      <!--document.getElementById("daredevil").innerHTML=list;-->
-      if(i!=0)document.getElementById(""+list[i-1]).setAttribute("class", "w3-opacity-max");
-      document.getElementById(""+list[i-2]).setAttribute("class", "w3-opacity-min");
-      i--;
+        slider.goToPrevSlide()
+        moveToNext(-1)
     }
-
-
   </script>
 
     {% block pagecontent %}
-    <div class="table-div">
     <!-- We will display our data in a normal HTML table using Django's
     template for-loop to generate our table rows for us-->
-
-      <ul id="menu">
+    <div class="demo">
+      <ul id="lightSlider" class="content-slider">
         {% for item in data %}
         <li>
-        <div class="division">
-          <!--<img src={{item.image_url}} class="w3-opacity-max"  style="width:300px" id="0">-->
-          <img src="https://static.amazon.jobs/locations/49/thumbnails/SF_Bay_Area_Thumbnail-01.jpg?1489696413" class="w3-opacity-max"  style="width:20%" style="height:20%" id={{item.pk}}>
-          <!--<p align="center" style="display: inline;">hello</p>-->
-          <!--<p>{{item.event_name}}</p>-->
+        <div class="item">
+          <img src="https://static.amazon.jobs/locations/49/thumbnails/SF_Bay_Area_Thumbnail-01.jpg?1489696413" class="w3-opacity-max"  style="width:80%" style="height:80%" id={{item.pk}}>
+            <p>{{ item.event_name }}</p>
         </div>
-
-
-          <!--hello-->
         </li>
 
         {% endfor %}
       </ul>
-
-      <ul id="menu">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>PHP</li>
-      </ul>
-
-      <ul id="menu">
-        <li><div style='float:left'>HTML</div></li>
-          <li><div style='float:right'>CSS</div></li>
-          <li><div>JavaScript</div></li>
-          <li><div>PHP</div></li>
-      </ul>
-
-
-      <ul id="menu">
-          <li>          c
-</li>
-          <li>          <img src="https://static.amazon.jobs/locations/49/thumbnails/SF_Bay_Area_Thumbnail-01.jpg?1489696413" class="w3-opacity-max"  style="width:300px" id="0">
-</li>
-          <li>          <img src="https://static.amazon.jobs/locations/49/thumbnails/SF_Bay_Area_Thumbnail-01.jpg?1489696413" class="w3-opacity-max"  style="width:300px" id="0">
-</li>
-          <li>          <img src="https://static.amazon.jobs/locations/49/thumbnails/SF_Bay_Area_Thumbnail-01.jpg?1489696413" class="w3-opacity-max"  style="width:300px" id="0">
-</li>
-      </ul>
-
-    </div>
-
-
-
-    <div id="firstDivistion" class="division"><img src="https://static.amazon.jobs/locations/49/thumbnails/SF_Bay_Area_Thumbnail-01.jpg?1489696413" class="w3-opacity-max"  style="width:300px" id="0"></div>
-    <div id="secondDivistion" class="division"><img src="https://static.amazon.jobs/locations/49/thumbnails/SF_Bay_Area_Thumbnail-01.jpg?1489696413" class="w3-opacity-max"  style="width:300px" id="0"></div>
-      <!--<table class="table">-->
-        <!--<thead>-->
-          <!--<tr>-->
-            <!--<th>Event Name</th>-->
-            <!--<th>Time Stamp</th>-->
-          <!--</tr>-->
-        <!--</thead>-->
-        <!--<tbody>-->
-          <!--{% for event in data %}-->
-            <!--<tr>-->
-              <!--<td>{{ event.event_name }}</td>-->
-              <!--<td>{{ event.time_stamp }}</td>-->
-            <!--</tr>-->
-          <!--{% endfor %}-->
-        <!--</tbody>-->
-      <!--</table>-->
     </div>
     {% endblock %}
   </body>
